# data-projects

./: .gitattributes  .gitignore  365ds-machine-learning-with-python.ipynb  365ds-python-programmer-bootcamp.ipynb  README.md  autotrader-extractor.py  brainstation-intro-to-data-science.ipynb  dsml-playground.ipynb  kaggle-intermediate-machine-learning.ipynb  kaggle-intermediate-machinelearning.ipynb  kaggle-intro-to-machine-learning.ipynb  kaggle-pandas.ipynb  ods032-prophet.ipynb  ods032-tf.ipynb  ods032.ipynb  solar-power-generation-data-anikannal.ipynb  st.ipynb
.devcontainer/: devcontainer.json
Maths/: maths_game.py
basic_apis/: pyproject.toml
basic_apis/diamond-price/fastapi-app/: Dockerfile  request.ipynb  requirements.txt
basic_apis/diamond-price/fastapi-app/.github/workflows/: deploy.yml
basic_apis/diamond-price/fastapi-app/app/: main.py
basic_apis/diamond-price/fastapi-app/app/model/: diamonds_rf_model.pkl  model_inference.py
basic_apis/diamond-price/fastapi-app/working/: main_multiple_input_types.py
basic_apis/diamond-price/model/: diamonds.ipynb
basic_apis/sentiment-analysis/flask-app/: Dockerfile  app.py
basic_apis/sentiment-analysis/model/: sentiment-analysis.ipynb
data/: car_data.csv  (+2 more)
screen-distance-time-alert/: pyproject.toml  screen_distance_time_alert.py  screen_distance_time_alert_mac.py  screen_distance_time_alert_mac_2.py  screen_distance_time_alert_mac_simple.py  sdta_menubar.sh  setup.py
visualising-trees/: decision-trees.py  decision_trees.py  decision_trees__script.py  gradient_boosted.py  pyproject.toml  random_forests.py
(+117 files in other folders)
