[project]
name = "basic-apis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "textblob>=0.19.0",
    "typing>=3.10.0.0",
    "uvicorn>=0.34.0",
]
