[project]
name = "screen-distance-time-alert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvzone>=1.6.1",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "py2app>=0.28.8",
    "rumps>=0.4.0",
]
